28 Mar 2002 HTTP server - Jan Jaeger
24 Mar 2002 Fix ADRFMT definition in cmspc.c - Bernard van der Helm
21 Mar 2002 Fix MVPG so it works with Expanded Storage - Paul Leisy
20 Mar 2002 Sequential files now supported by dasdload.c - Greg Smith
17 Mar 2002 Fix Read-Configuration-Data and Sense-ID CIW - Greg Smith
17 Mar 2002 Common DASD tables (dasdtab.c & dasdtab.h) - Greg Smith
17 Mar 2002 DASD utilities cckd support - Greg Smith
16 Mar 2002 Fixed benign warnings in ctcadpt.c & un-tabbed file - Fish
15 Mar 2002 Fixed automagic for building standalone dasd utilities - Volker Bandke
09 Mar 2002 Lan Channel Station (LCS) support
09 Mar 2002 Initial cckd dasd utilities support - Greg Smith
07 Mar 2002 More service signal updates for AO support - Jan Jaeger
05 Mar 2002 Add test_lock macro and enhance ipending
            command with lock status on various locks - Jan Jaeger
05 Mar 2002 Merge sigpbusy into sigplock - Jan Jaeger
05 Mar 2002 Allow print to pipe for Win32 (future print spooling) - Fish
05 Mar 2002 Fix print to pipe bug so broken pipe is detected - Fish
05 Mar 2002 stop/start printer support - Fish
04 Mar 2002 Fix load_hmc() with null filename - Jan Jaeger
04 Mar 2002 Support composite service signals - Jan Jaeger
03 Mar 2002 Remove ckd and cckd sysblk dependencies in prep for
            cckd dasd utility support - Greg Smith
02 Mar 2002 Display version info via stdout instead of stderr - Fish
02 Mar 2002 Added #include <sched.h> to hercules.h and some #ifdefs
            in a few places to fix some compiler warnings, and fixed
            a few minor typos here and there - Fish
02 Mar 2002 external gui support to dasdcat - Fish
01 Mar 2002 Fix and simplify cckd chkdsk default processing - Greg Smith
01 Mar 2002 Fix priority of PIC 13 for PT - Paul Leisy
01 Mar 2002 Fix cancel_subchan if OPTION_FISHIO - Greg Smith
28 Feb 2002 Allow for cr/lf in 3215 code and change ebcdic to ascii
            convertion table entry x'15' from x'b4' to x'0a' - Jan Jaeger